--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+Test2.json
+Assets/Scripts/KodEngine/NetKodE/PlayerNetworkInstance.cs
